small tweaks to appearance

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@ layout: home
 search_exclude: true
 ---
 
-### Jason G. Fleischer, Ph.D.
-{: style="text-align: center"}
-
-Data Scientist<br>
-The Salk Institute for Biological Studies<br>
-<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br>
-{: style="text-align: center"}
+<span style="font-size: large font-weight: bold">Jason G. Fleischer,
+Ph.D.</span>  
+Data Scientist  
+<a href="https://www.salk.edu">The Salk Institute for Biological Studies</a>
+La Jolla, California
+<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a>   
+<br>
+<p>
+<br>
 
 <div style="float: right">
   
@@ -22,9 +24,10 @@ The Salk Institute for Biological Studies<br>
 
 I explore changes in gene expression during aging with
 the labs of <a
-href="https://hetzer.salk.edu/">Martin Hetzer</a> and <a
+href="https://hetzer.salk.edu/">Martin Hetzer</a>, <a
+href="https://gage.salk.edu">Rusty Gage</a> and <a
 href="https://navlakhalab.net/">
-Saket Navlakha</a> I am interested in understanding if there are
+Saket Navlakha</a>. I am interested in understanding if there are
 molecular markers that can predict "biological age" as
 distinct from chronological age. A method to correctly
 predict biological age would be useful in understanding the
