deploy: 050ed180a3a3d671685c482833055acc53f08e87

--- a/index.html
+++ b/index.html
@@ -94,11 +94,15 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h3 style="text-align: center" id="jason-g-fleischer-phd">Jason G. Fleischer, Ph.D.</h3>
-
-<p style="text-align: center">Data Scientist<br />
-The Salk Institute for Biological Studies<br />
-<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br /></p>
+        <div class="home"><p><span style="font-size: large font-weight: bold">Jason G. Fleischer,
+Ph.D.</span><br />
+Data Scientist<br />
+<a href="https://www.salk.edu">The Salk Institute for Biological Studies</a>
+La Jolla, California
+<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a> <br />
+<br /></p>
+<p>
+<br />
 
 <div style="float: right">
   
@@ -108,18 +112,18 @@ The Salk Institute for Biological Studies<br />
 
 </div>
 
-<h2 id="research">Research</h2>
+## Research
 
-<p>I explore changes in gene expression during aging with
-the labs of <a href="https://hetzer.salk.edu/">Martin Hetzer</a> and <a href="https://navlakhalab.net/">
-Saket Navlakha</a> I am interested in understanding if there are
-molecular markers that can predict “biological age” as
+I explore changes in gene expression during aging with
+the labs of <a href="https://hetzer.salk.edu/">Martin Hetzer</a>, <a href="https://gage.salk.edu">Rusty Gage</a> and <a href="https://navlakhalab.net/">
+Saket Navlakha</a>. I am interested in understanding if there are
+molecular markers that can predict "biological age" as
 distinct from chronological age. A method to correctly
 predict biological age would be useful in understanding the
 aging process, and would have applications in the evaluation
-of treatments and in the clinic.</p>
+of treatments and in the clinic.
 
-<p>In collaboration with the labs of <a href="https://panda.salk.edu/">Satchidananda
+In collaboration with the labs of <a href="https://panda.salk.edu/">Satchidananda
 Panda</a> and <a href="http://depts.washington.edu/delaiglesialab/wordpress/">Horacio
 de la Iglesia</a>, I analyze
 human health data from clinical measures, actiwatches, and
@@ -128,16 +132,19 @@ investigate relationships between circadian rhythms, sleep
 patterns, light exposure, behavior, and glucose
 regulation. A better understanding of the interplay between
 circadian and metabolic processes will help us develop
-recommendations for a healthy lifestyle and good public policy.</p>
+recommendations for a healthy lifestyle and good public policy.
 
-<p>In previous work I used computational neural models to ask questions such as:
+
+In previous work I used computational neural models to ask questions such as:
 How are memories formed and maintained? How are those memories used to generate
 flexible behavior as opposed to more rigid conditioned
 responses? How do the complex interactions between brain,
-body, and environment generate adaptive responses?</p>
+body, and environment generate adaptive responses? 
 
-<h2 id="blog-posts">Blog posts</h2>
 
+## Blog posts
+    
+</p>
 
 
 
