small tweaks to appearance

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ search_exclude: true
 ---
 
 <span style="font-size: large font-weight: bold">Jason G. Fleischer,
-Ph.D.</span>  
-Data Scientist  
-<a href="https://www.salk.edu">The Salk Institute for Biological Studies</a>
-La Jolla, California
-<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a>   
+Ph.D.</span><br>
+Data Scientist<br>
+<a href="https://www.salk.edu">The Salk Institute for Biological Studies</a><br>
+La Jolla, California<br>
+<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br>
 <br>
 <p>
 <br>
