deploy: 703509028e3ef01fd9fb1118d45497bf027980d3

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@ window.onload = wrap_img;
         <div class="home"><p><span style="font-size: large font-weight: bold">Jason G. Fleischer,
 Ph.D.</span><br />
 Data Scientist<br />
-<a href="https://www.salk.edu">The Salk Institute for Biological Studies</a>
-La Jolla, California
-<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a> <br />
+<a href="https://www.salk.edu">The Salk Institute for Biological Studies</a><br />
+La Jolla, California<br />
+<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br />
 <br /></p>
 <p>
 <br />
