small tweaks to appearance

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@ layout: home
 search_exclude: true
 ---
 
-<span style="font-size: large font-weight: bold">Jason G. Fleischer,
+<span style="font-size: large">Jason G. Fleischer,
 Ph.D.</span><br>
 Data Scientist<br>
 <a href="https://www.salk.edu">The Salk Institute for Biological Studies</a><br>
 La Jolla, California<br>
 <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br>
-<br>
 <p>
 <br>
 
@@ -20,7 +19,7 @@ La Jolla, California<br>
 
 </div>
 
-## Research
+<h2>Research</h2>
 
 I explore changes in gene expression during aging with
 the labs of <a
@@ -54,5 +53,5 @@ responses? How do the complex interactions between brain,
 body, and environment generate adaptive responses? 
 
 
-## Blog posts
+<h2>Blog posts</h2>
     
