deploy: 63145ecac4530453d7d94e71b79902dbda1723dc

--- a/index.html
+++ b/index.html
@@ -94,13 +94,12 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><span style="font-size: large font-weight: bold">Jason G. Fleischer,
+        <div class="home"><p><span style="font-size: large">Jason G. Fleischer,
 Ph.D.</span><br />
 Data Scientist<br />
 <a href="https://www.salk.edu">The Salk Institute for Biological Studies</a><br />
 La Jolla, California<br />
-<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br />
-<br /></p>
+<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br /></p>
 <p>
 <br />
 
@@ -112,7 +111,7 @@ La Jolla, California<br />
 
 </div>
 
-## Research
+<h2>Research</h2>
 
 I explore changes in gene expression during aging with
 the labs of <a href="https://hetzer.salk.edu/">Martin Hetzer</a>, <a href="https://gage.salk.edu">Rusty Gage</a> and <a href="https://navlakhalab.net/">
@@ -142,7 +141,7 @@ responses? How do the complex interactions between brain,
 body, and environment generate adaptive responses? 
 
 
-## Blog posts
+<h2>Blog posts</h2>
     
 </p>
 
