small tweaks to appearance

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: home
 search_exclude: true
 ---
 
-<span style="font-size: large">Jason G. Fleischer,
+<div style="text-align: right">
+<span style="font-size:large; font-weight:bold">Jason G. Fleischer,
 Ph.D.</span><br>
 Data Scientist<br>
 <a href="https://www.salk.edu">The Salk Institute for Biological Studies</a><br>
@@ -11,8 +12,9 @@ La Jolla, California<br>
 <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br>
 <p>
 <br>
+</div>
 
-<div style="float: right">
+<div style="float:right; margin-left:50px; margin-bottom:50px;">
   
   {% twitter https://twitter.com/jasongfleischer maxwidth=250
   align='right' limit=5 %}
@@ -21,7 +23,7 @@ La Jolla, California<br>
 
 <h2>Research</h2>
 
-I explore changes in gene expression during aging with
+<p>I explore changes in gene expression during aging with
 the labs of <a
 href="https://hetzer.salk.edu/">Martin Hetzer</a>, <a
 href="https://gage.salk.edu">Rusty Gage</a> and <a
@@ -33,7 +35,7 @@ predict biological age would be useful in understanding the
 aging process, and would have applications in the evaluation
 of treatments and in the clinic.
 
-In collaboration with the labs of <a href="https://panda.salk.edu/">Satchidananda
+<p>In collaboration with the labs of <a href="https://panda.salk.edu/">Satchidananda
 Panda</a> and <a
 href="http://depts.washington.edu/delaiglesialab/wordpress/">Horacio
 de la Iglesia</a>, I analyze
@@ -46,7 +48,7 @@ circadian and metabolic processes will help us develop
 recommendations for a healthy lifestyle and good public policy.
 
 
-In previous work I used computational neural models to ask questions such as:
+<p>In previous work I used computational neural models to ask questions such as:
 How are memories formed and maintained? How are those memories used to generate
 flexible behavior as opposed to more rigid conditioned
 responses? How do the complex interactions between brain,
