deploy: 8584965a96778a280995ceeb3da8285430136656

--- a/index.html
+++ b/index.html
@@ -94,16 +94,18 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><span style="font-size: large">Jason G. Fleischer,
+        <div class="home"><div style="text-align: right">
+<span style="font-size:large; font-weight:bold">Jason G. Fleischer,
 Ph.D.</span><br />
 Data Scientist<br />
 <a href="https://www.salk.edu">The Salk Institute for Biological Studies</a><br />
 La Jolla, California<br />
-<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br /></p>
+<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br />
 <p>
 <br />
+&lt;/div&gt;
 
-<div style="float: right">
+<div style="float:right; margin-left:50px; margin-bottom:50px;">
   
   <div class="jekyll-twitter-plugin"><a class="twitter-timeline" data-width="250" data-tweet-limit="5" href="https://twitter.com/jasongfleischer?ref_src=twsrc%5Etfw">Tweets by jasongfleischer</a>
 <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -113,7 +115,7 @@ La Jolla, California<br />
 
 <h2>Research</h2>
 
-I explore changes in gene expression during aging with
+<p>I explore changes in gene expression during aging with
 the labs of <a href="https://hetzer.salk.edu/">Martin Hetzer</a>, <a href="https://gage.salk.edu">Rusty Gage</a> and <a href="https://navlakhalab.net/">
 Saket Navlakha</a>. I am interested in understanding if there are
 molecular markers that can predict "biological age" as
@@ -122,7 +124,7 @@ predict biological age would be useful in understanding the
 aging process, and would have applications in the evaluation
 of treatments and in the clinic.
 
-In collaboration with the labs of <a href="https://panda.salk.edu/">Satchidananda
+<p>In collaboration with the labs of <a href="https://panda.salk.edu/">Satchidananda
 Panda</a> and <a href="http://depts.washington.edu/delaiglesialab/wordpress/">Horacio
 de la Iglesia</a>, I analyze
 human health data from clinical measures, actiwatches, and
@@ -134,7 +136,7 @@ circadian and metabolic processes will help us develop
 recommendations for a healthy lifestyle and good public policy.
 
 
-In previous work I used computational neural models to ask questions such as:
+<p>In previous work I used computational neural models to ask questions such as:
 How are memories formed and maintained? How are those memories used to generate
 flexible behavior as opposed to more rigid conditioned
 responses? How do the complex interactions between brain,
@@ -143,7 +145,7 @@ body, and environment generate adaptive responses?
 
 <h2>Blog posts</h2>
     
-</p>
+</p></p></p></p></div>
 
 
 
