small tweaks to appearance

--- a/index.html
+++ b/index.html
@@ -3,22 +3,17 @@ layout: home
 search_exclude: true
 ---
 
-<div style="text-align: right">
+
 <span style="font-size:large; font-weight:bold">Jason G. Fleischer,
 Ph.D.</span><br>
 Data Scientist<br>
 <a href="https://www.salk.edu">The Salk Institute for Biological Studies</a><br>
 La Jolla, California<br>
 <a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br>
-<p>
-<br>
-</div>
 
-<div style="float:right; margin-left:50px; margin-bottom:50px;">
-  
+<div style="float:right; margin-top:35px; margin-left:35px; margin-bottom:35px;">
   {% twitter https://twitter.com/jasongfleischer maxwidth=250
   align='right' limit=5 %}
-
 </div>
 
 <h2>Research</h2>
