deploy: d24b23438de71ea3f4d1ab747182aae959c9fbda

--- a/index.html
+++ b/index.html
@@ -94,23 +94,17 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><div style="text-align: right">
-<span style="font-size:large; font-weight:bold">Jason G. Fleischer,
+        <div class="home"><p><span style="font-size:large; font-weight:bold">Jason G. Fleischer,
 Ph.D.</span><br />
 Data Scientist<br />
 <a href="https://www.salk.edu">The Salk Institute for Biological Studies</a><br />
 La Jolla, California<br />
-<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br />
-<p>
-<br />
-&lt;/div&gt;
+<a href="mailto:jfleischer@salk.edu">jfleischer@salk.edu</a><br /></p>
 
-<div style="float:right; margin-left:50px; margin-bottom:50px;">
-  
+<div style="float:right; margin-top:35px; margin-left:35px; margin-bottom:35px;">
   <div class="jekyll-twitter-plugin"><a class="twitter-timeline" data-width="250" data-tweet-limit="5" href="https://twitter.com/jasongfleischer?ref_src=twsrc%5Etfw">Tweets by jasongfleischer</a>
 <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
-
 </div>
 
 <h2>Research</h2>
@@ -145,7 +139,7 @@ body, and environment generate adaptive responses?
 
 <h2>Blog posts</h2>
     
-</p></p></p></p></div>
+</p></p></p>
 
 
 
